--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="http://">Home</a>
-            <a href="http://">About us</a>
-            <a href="http://">Contact</a>
-        </nav>
-        <div class="conteiner hero">
-            <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto debitis nobis quasi assumenda error enim?</p>
-            <button>Jou, I'm here</button>
-        </div>
-    </header>
+    <nav>
+        <div class="item">Menu item</div>
+        <div class="item">Menu item</div>
+        <div class="item">Menu item</div>
+        <div class="item">Menu item</div>
+        <div class="item">Menu item</div>
+    </nav>
+    <button id="toggle">Toggle</button>
+    <script>
+        const toggle = addEventListener('click',() => console.log('lol'))
+    </script>
 </body>
 </html>
